@@ -2,6 +2,7 @@
 
  - optimized printing of text (line buffered)
  - audio-data with same specs as former one is played with less latency
+ - improved support for 24 and 32 bit audio
 
   C-API changes:
     - new macro: AVT_KEY_F
